LMS/force-app/main/default/objects/Loan__c/Loan__c.object-meta.xml
<CustomObject>
    <label>Loan</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Loan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>