LMS/force-app/main/default/objects/Loan__c/fields/Application_Related_To__c.field-meta.xml
<CustomField>
    <fullName>Application_Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Related To</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>