LMS/force-app/main/default/objects/Loan__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>