LMS/force-app/main/default/objects/Loan__c/fields/Current_Monthly_Loan_Repayment_c__c.field-meta.xml
<CustomField>
    <fullName>Current_Monthly_Loan_Repayment_c__c</fullName>
    <label>Current Monthly Loan Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>