LMS/force-app/main/default/objects/Loan__c/fields/Customer_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interest_Rate__c</fullName>
    <label>Customer Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>