LMS/force-app/main/default/objects/Loan__c/fields/Finance_Type__c.field-meta.xml
<CustomField>
    <fullName>Finance_Type__c</fullName>
    <label>Finance Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>