LMS/force-app/main/default/objects/Loan__c/fields/Financial_Calculator_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Financial_Calculator_Scenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Calculator Scenario</label>
    <referenceTo>MortgageCalc__Financial_Calculator__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>