LMS/force-app/main/default/objects/Loan__c/fields/Lender_Funder__c.field-meta.xml
<CustomField>
    <fullName>Lender_Funder__c</fullName>
    <label>Lender/Funder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AAMI</fullName>
            </value>
            <value>
                <fullName>AAPBS Settlements Services</fullName>
            </value>
            <value>
                <fullName>ABN AMRO</fullName>
            </value>
            <value>
                <fullName>Adelaide Bank</fullName>
            </value>
            <value>
                <fullName>Advantedge</fullName>
            </value>
            <value>
                <fullName>AFG Home Loans</fullName>
            </value>
            <value>
                <fullName>AGC</fullName>
            </value>
            <value>
                <fullName>Allianz</fullName>
            </value>
            <value>
                <fullName>Allstate Home Loans</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>AMG</fullName>
            </value>
            <value>
                <fullName>AMIC</fullName>
            </value>
            <value>
                <fullName>AMIST</fullName>
            </value>
            <value>
                <fullName>AMP</fullName>
            </value>
            <value>
                <fullName>AMS</fullName>
            </value>
            <value>
                <fullName>ANZ Bank</fullName>
            </value>
            <value>
                <fullName>ANZ Wealth</fullName>
            </value>
            <value>
                <fullName>Aon Master Trust</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Arab Bank of Australia</fullName>
            </value>
            <value>
                <fullName>Armidale Building Society</fullName>
            </value>
            <value>
                <fullName>Asahi Bank</fullName>
            </value>
            <value>
                <fullName>Aussie Home Loans</fullName>
            </value>
            <value>
                <fullName>Aussie Mastercard</fullName>
            </value>
            <value>
                <fullName>Aussie Mortgage Ltd</fullName>
            </value>
            <value>
                <fullName>Aust Alliance</fullName>
            </value>
            <value>
                <fullName>Australia Central Credit Union</fullName>
            </value>
            <value>
                <fullName>Australian Catholic</fullName>
            </value>
            <value>
                <fullName>Australian Defence Credit Union</fullName>
            </value>
            <value>
                <fullName>Australian Eagle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>