LMS/force-app/main/default/objects/Loan__c/fields/Loan_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Loan_Account_No__c</fullName>
    <externalId>true</externalId>
    <label>Loan Account No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>