LMS/force-app/main/default/objects/Loan__c/fields/Loan_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_c__c</fullName>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>