LMS/force-app/main/default/objects/Loan__c/fields/Quote_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Quote_Calculator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Calculator</label>
    <referenceTo>quoteCal__Quote_Calculator__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>