LMS/force-app/main/default/objects/Loan__c/fields/Security_Value__c.field-meta.xml
<CustomField>
    <fullName>Security_Value__c</fullName>
    <formula>Application_Related_To__r.Security_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Security Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>