LMS/force-app/main/default/objects/Loan__c/fields/Serviceability_Calculator_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Serviceability_Calculator_Scenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Serviceability Calculator Scenario</label>
    <referenceTo>servicecal__Non_Resident__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>