LMS/force-app/main/default/objects/Loan__c/fields/Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_End_Date__c</fullName>
    <formula>ADDMONTHS(Term_Start_Date__c ,Term_of_Loan_N__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>