LMS/force-app/main/default/objects/Loan__c/fields/Term_of_Loan_N__c.field-meta.xml
<CustomField>
    <fullName>Term_of_Loan_N__c</fullName>
    <label>Term of Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>