LMS/force-app/main/default/objects/Loan__c/fields/Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Start_Date__c</fullName>
    <formula>Application_Related_To__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Start Date</label>
    <type>Date</type>
</CustomField>