LMS/force-app/main/default/objects/Loan__c/fields/Total_Loan_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Repayment__c</fullName>
    <label>Total Loan Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>