LMS/force-app/main/default/objects/Loan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Loan_Amount_c__c</columns>
    <columns>Total_Interest__c</columns>
    <columns>Total_Loan_Repayment__c</columns>
    <columns>Term_of_Loan_N__c</columns>
    <columns>Term_Start_Date__c</columns>
    <columns>Term_End_Date__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>Lender_Funder__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>